@@ -3,14 +3,14 @@ package P05FunctionalProgramming.Exercise;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
-import java.util.function.Consumer;
 import java.util.stream.Collectors;
+
 
 public class P01ConsumerPrint {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
 
-        List<String> inputList = Arrays.stream(scanner.nextLine().split(" ")).toList();
+        List<String> inputList = Arrays.stream(scanner.nextLine().split(" ")).collect(Collectors.toList());
         inputList.forEach(element -> System.out.println(element));
     }
 }
